--- a/style.css
+++ b/style.css
@@ -40,3 +40,9 @@ main h2 {
 .codys-styles {
     background:rgb(92, 149, 235);
 }
+
+.code-clay's-style {
+    color: blue;
+    background-color: aqua;
+    padding: 6px;
+}
