--- a/style.css
+++ b/style.css
@@ -43,6 +43,6 @@ main h2 {
 
 .code-clay's-style {
     color: blue;
-    background-color: aqua;
+    background-color: aliceblue;
     padding: 6px;
 }
