--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ main h2 {
     background:rgb(92, 149, 235);
 }
 
-.code-clays-style {
+.clays-style {
     color: blue;
     background-color: aliceblue;
     padding: 6px;
